--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
@@ -9,12 +10,107 @@
     tools:showIn="@layout/app_bar_main">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:background="@color/bright"
+        android:text="TITLE"
+        android:id="@+id/titleHome"
+        android:textSize="40sp"
+        android:gravity="center"
+        />
 
-</android.support.constraint.ConstraintLayout>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="horizontal" >
+
+    <LinearLayout
+        android:id="@+id/ll1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:gravity="center_horizontal"
+        android:paddingTop="30dp"
+        android:paddingRight="-30dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Equipment"/>
+        <ImageView
+            android:layout_width="@dimen/icon_home_size"
+            android:layout_height="@dimen/icon_home_size"
+            android:id="@+id/iconHomeEquipment"
+            android:src="@mipmap/e1"
+            android:background="@color/bright"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Equipment"/>
+        <ImageView
+            android:layout_width="@dimen/icon_home_size"
+            android:layout_height="@dimen/icon_home_size"
+            android:src="@drawable/ic_menu_camera"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Equipment"/>
+        <ImageView
+            android:layout_width="@dimen/icon_home_size"
+            android:layout_height="@dimen/icon_home_size"
+            android:src="@drawable/ic_menu_camera"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Equipment"/>
+        <ImageView
+            android:layout_width="@dimen/icon_home_size"
+            android:layout_height="@dimen/icon_home_size"
+            android:src="@drawable/ic_menu_camera"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/ll2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:orientation="vertical"
+        android:gravity="center_horizontal"
+        android:paddingTop="30dp"
+        android:paddingLeft="-30dp">>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Equipment"/>
+        <ImageView
+            android:layout_width="@dimen/icon_home_size"
+            android:layout_height="@dimen/icon_home_size"
+            android:src="@drawable/ic_menu_camera"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Equipment"/>
+        <ImageView
+            android:layout_width="@dimen/icon_home_size"
+            android:layout_height="@dimen/icon_home_size"
+            android:src="@drawable/ic_menu_camera"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Equipment"/>
+        <ImageView
+            android:layout_width="@dimen/icon_home_size"
+            android:layout_height="@dimen/icon_home_size"
+            android:src="@drawable/ic_menu_camera"/>
+
+
+    </LinearLayout>
+
+
+</LinearLayout>
+
+
+
+</LinearLayout>
