--- a/app/src/main/res/layout/activity_display_information.xml
+++ b/app/src/main/res/layout/activity_display_information.xml
@@ -10,39 +10,51 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/app_bar_height"
+        android:layout_height="120dp"
         android:fitsSystemWindows="true"
         android:theme="@style/AppTheme.AppBarOverlay">
 
-        <android.support.design.widget.CollapsingToolbarLayout
-            android:id="@+id/toolbar_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fitsSystemWindows="true"
-            app:contentScrim="?attr/colorPrimary"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+        <!--<android.support.design.widget.CollapsingToolbarLayout-->
+            <!--android:id="@+id/toolbar_layout"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:fitsSystemWindows="true"-->
+            <!--app:contentScrim="?attr/colorPrimary"-->
+            <!--app:layout_scrollFlags="scroll|exitUntilCollapsed">-->
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbarDetails"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="pin"
-                app:popupTheme="@style/AppTheme.PopupOverlay" >
+                android:layout_height="match_parent"
+                app:popupTheme="@style/AppTheme.PopupOverlay">
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
-                    <ImageView
+
+                    <TextView
+                        android:id="@+id/textViewInformation"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:id="@+id/imagedetails"
+                        android:layout_alignParentBottom="true"
+                        android:layout_alignParentStart="true"
+                        android:paddingBottom="10dp"
+                        android:text="aabbasdf"
+                        android:textColor="#fff"
+                        android:textSize="35dp" />
 
+                    <ImageView
+                        android:id="@+id/imagedetails"
+                        android:layout_width="110dp"
+                        android:layout_height="110dp"
+                        android:layout_alignParentBottom="true"
                         android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true"/>
+                        android:padding="20dp"
+                        android:paddingTop="40dp" />
                 </RelativeLayout>
 
             </android.support.v7.widget.Toolbar>
 
-        </android.support.design.widget.CollapsingToolbarLayout>
+        <!--</android.support.design.widget.CollapsingToolbarLayout>-->
     </android.support.design.widget.AppBarLayout>
 
     <include layout="@layout/content_display_information" />
