--- a/app/src/main/res/layout/activity_equipment.xml
+++ b/app/src/main/res/layout/activity_equipment.xml
@@ -9,13 +9,14 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/appbarDetails"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="150dp"
-            android:background="@mipmap/navi"
+            android:layout_height="?attr/actionBarSize"
+            android:background="#00BCD4"
             app:popupTheme="@style/AppTheme.PopupOverlay" />
 
     </android.support.design.widget.AppBarLayout>
