--- a/app/src/main/res/layout/card_view_row.xml
+++ b/app/src/main/res/layout/card_view_row.xml
@@ -8,7 +8,7 @@
     card_view:cardElevation="4dp"
     android:padding="10dp"
     android:id="@+id/Details_Card"
-    card_view:cardBackgroundColor="#18456E">
+    card_view:cardBackgroundColor="#FFFFFF">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/textDescription"
             android:text="test data"
-            android:textColor="#fdf8aa"
+            android:textColor="#000000"
             android:layout_centerVertical="true"
             android:textSize="30dp"
             android:paddingLeft="20dp"/>
@@ -33,7 +33,7 @@
             android:layout_height="100dp"
             android:id="@+id/imageView"
             android:src="@mipmap/e1"
-            android:background="#1E578C"
+            android:background="#ECEFF1"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true" />
 
